# notion-rss

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json  vite.config.js
.cargo/: config.toml
.github/workflows/: dockerhub-push.yml  post-release.yml  test.yml
src/: App.vue  api.rs  lib.rs  main.rs  rss.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  cli.rs  lib.rs  main.rs  rss.rs  tray.rs  ui.rs
src/components/: HelloWorld.vue
src/locales/: en.js  zh.js
src/plugins/: bookmark.js  index.js  vuetify.js  worker.js
