[workspace]
members = ["src-tauri"]

#https://github.com/johnthagen/min-sized-rust
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
#strip = true        # Automatically strip symbols from the binary.

[profile.dev.package."*"]
opt-level = 3
[profile.test]
opt-level = 3
lto = "thin"

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
