[package]
name = "notion-rss" #改这个
version = "0.1.0"
edition = "2021"
authors = ["Kali-Team <root@kali-team.cn>"]
include = ["LICENSE", "Cargo.toml", "src/**/*.rs"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
opml = "1.1.5"
argh = "0.1.8"
notion-sdk = { git = "https://github.com/emo-cat/notion-rs" }
tokio = { version = "1.25.0", features = ["full"] }
futures = { version = "0.3", features = ["compat"] }
once_cell = "1.16.0"
feed-rs = "1.3.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.11", features = ["json", "gzip", "native-tls", "socks"] }
anyhow = "1"
dirs = "5.0.0"
chrono = { version = "0.4.19", features = ["serde", "clock"] }
serde = { version = "1.0.147", features = ["derive"] }
select = "0.5.0"
mime = "0.3.16"
encoding_rs = "0.8.28"
regex = { version = "1.4.5", default-features = false, features = [
    "std",
    "unicode",
] }
serde_yaml = "0.9"
tauri = { version = "1.2", features = ["clipboard-all", "devtools", "global-shortcut", "icon-ico", "icon-png", "notification", "process-all", "system-tray", "updater", "window-all"], optional = true }
actix-web = { version = "4.2.1", features = ["openssl"] }
[target.'cfg(not(target_os = "windows"))'.dependencies]
daemonize = "0.4.1"
[target.'cfg(target_os="windows")'.build-dependencies]
winres = "0.1"
window-shadows = { version = "0.2.0" }
[features]
default = ["gui"]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
custom-protocol = ["tauri/custom-protocol"]
gui = ["tauri", "custom-protocol"]
cli = []
